// service.account

syntax = "proto3";
package accountPackage;

service AccountService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Me(MeRequest) returns (MeResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);

}

message RegisterRequest {
  string username = 1;
  string nickname = 2;
  string password = 3;
  string password_confirm = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message MeRequest {
  int64 id = 1;
}

message LogoutRequest {
  int64 id = 1;
}

// response
message RegisterResponse {
  int32 code = 1;
  string message = 2;
}

message LoginResponse {
  int32 code = 1;
  string token = 2;
  string message = 3;
}

message MeResponse {
  int64  id = 1;
  string username = 2;
  string nickname = 3;
  string status = 4;
  string avatar = 5;
  int64 created_at = 6;
}

message LogoutResponse {
  int32 code = 1;
  string message = 2;
}

